# dads-mmo-lab-ui

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  README.md  STEAMOS_AND_MULTI_SERVER_AUDIT.md  TODO-NEXT.md  TODO_IDEAS.md  VISION.md  WorkGoals_5-27-2026.md  WorkGoals_5-30-2026.md  preset_system_handoff.md
guides/wow-wotlk/: HOWTO-INSTALL.md  HOWTO-UNINSTALL.md  HOWTO-WOW-MODULES.md  check-admin-account.sh  check-docker.sh  fix-after-update-ui.sh  fix-after-update.sh  install-wow-ui.sh  install-wow.sh  install.sh  manage-wow-modules.sh  uninstall-wow-ui.sh  uninstall.sh
guides/wow-wotlk/dev-tools/: cur2png.py  seed-test-character.sh
guides/wow-wotlk/eluna-scripts/: dml_addclass.lua  dml_uninvite.lua
guides/wow-wotlk/how-to/: HOWTO-INSTALL-ELUNA.md  HOWTO-WINDOWS-WSL2.md
guides/wow-wotlk/ui/: CLAUDE.md  build-appimage.sh  index.html  package.json
guides/wow-wotlk/ui/scripts/: fetch-talent-backgrounds.sh
guides/wow-wotlk/ui/src/: App.tsx  index.css
guides/wow-wotlk/ui/src-tauri/: Cargo.toml  tauri.conf.json
guides/wow-wotlk/ui/src-tauri/capabilities/: default.json
guides/wow-wotlk/ui/src-tauri/examples/: extract_world_maps.rs  probe_client.rs
guides/wow-wotlk/ui/src-tauri/resources/party-presets/: deadmines-healer.toml  max-party-level-80.toml
guides/wow-wotlk/ui/src-tauri/src/: app_settings.rs  character_backup.rs  client_assets.rs  controller.rs  dashboard.rs  gearsets.rs  install.rs  inventory.rs  lib.rs  migrations.rs  modules.rs  playerbots.rs  presets.rs  server.rs  sfx.rs  soap.rs  steam_shortcuts.rs  steamos.rs  talent_trees.rs  uninstall.rs  worldsettings.rs  wow_client.rs
guides/wow-wotlk/ui/src/components/: add-to-party-wizard.tsx  ahbot-intro-overlay.tsx  app-sidebar.tsx  (+46 more)
(+21 files in other folders)
