[package]
name = "tauri-native"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "io-util", "rt", "sync", "time"] }
dirs = "5"
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
wow-mpq = "0.6.4"
wow_dbc = { version = "0.3.0", features = ["wrath"] }
zip = "8.6.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[dev-dependencies]
image = "0.25.10"
wow-blp = "0.6.4"
